<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context="com.innovationnation.potshub.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_greeting"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_welcome"
        android:layout_toEndOf="@+id/its"
        android:format12Hour="hh:mm a"
        android:format24Hour="HH:mm "
        android:textSize="35sp"
        android:typeface="sans" />

    <TextClock
        android:id="@+id/textClock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClock"
        android:layout_toEndOf="@+id/happy"
        android:format12Hour="EEEE"
        android:format24Hour="EEEE"
        android:textSize="35sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textClock"
        android:text="@string/date_prefix"
        android:textColor="#000000"
        android:textSize="35sp"
        android:paddingEnd="5dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/its"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_welcome"
        android:paddingEnd="10dp"
        android:text="@string/time_prefix"
        android:textColor="#000000"
        android:textSize="35sp"
        android:typeface="sans" />


    <LinearLayout

        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/happy"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/track_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/buttonshape"
                android:color="#4A86E8"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/track_button_name"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <!--<Button
                android:id="@+id/forum_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/buttonshape"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/forum_button_name"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />-->

            <Button
                android:id="@+id/blog_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/buttonshape"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/blog_button_name"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/pots_clock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/buttonshape"
                android:text="@string/clock_name"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textClock2"
        android:layout_toEndOf="@+id/textClock2"
        android:text="!"
        android:textColor="#000000"
        android:textSize="35sp"
        android:typeface="sans" />


</RelativeLayout>
